complete electron section

--- a/tex/objects.tex
+++ b/tex/objects.tex
@@ -20,7 +20,8 @@ by the passage of a neutrino (Sec.~\ref{sec:met}).
 \section{Electrons}
 \label{sec:electrons}
 
-An electron candidate object~\cite{elereco} is selected by searching for a narrow, 
+An electron candidate object~\cite{elereco} is selected by searching 
+for a narrow, 
 localized cluster of energy deposits in the EM calorimeter, 
 with at least one ID track\footnote{A track is the reconstruction 
 of the trajectory of a charged particle, which leaves $hits$ in the 
@@ -47,7 +48,8 @@ of the calorimeters cells in the cluster, based on the absolute
 value cell's energy.} is considered.
 The track momentum is required to be compatible with the cluster energy,
 which is calibrated to the electromagnetic scale. The calibration is
-derived from simulation, test-beam studies and data $Z\to ee$ events~\cite{elecalib}.
+derived from simulation, test-beam studies and data $Z\to ee$ 
+events~\cite{elecalib}.
 
 In order to suppress the mis-identification of other particles  
 as electrons, $tight$ selection criteria based on cluster shape, 
@@ -61,14 +63,16 @@ with electromagnetic decays reconstructed as a single energy cluster.
 Finally, the isolation helps rejecting electrons from heavy hadron 
 semi-leptonic decays.
 
-Overall, electron candidates are identified with \mbox{\approx{}$70\%$} 
+Overall, electron candidates are identified with \mbox{$\approx{}70\%$} 
 efficiency and a contamination rate of about \mbox{$2\cdot{}10^{-5}$}.
 A $loose$ selection, where some of the requirements are relaxed, 
 is also used, with the purpose of studying and modeling the contamination
 in the $tight$ candidates. The procedure to estimate this background
 contribution is detailed in Sec.~\ref{sec:bckg}[QCD background].
 
-The $\et$ of the electron is required to be larger than \mbox{$25 \GeV$}.
+The $\et$ of the electron is required to be larger than \mbox{$25 \GeV$}
+and electrons in the transition region $1.37<|\eta_{\mathrm{cluster}}|<1.52$
+are not considered.
 
 \section{Muons}
 \label{sec:muons}
