--- a/tex/objects.tex
+++ b/tex/objects.tex
@@ -14,8 +14,39 @@ by the passage of a neutrino (Sec.~\ref{sec:met}).
 \section{Tracks}
 \label{sec:tracks}
 
+In the solenoidal magnetic field of the inner detectors,
+a charged particle moves along a helicoidal trajectory with a 
+curvature proportional to its momentum.
+Tracks are the reconstruction of these trajectories from the electric 
+signals induced in the silicon detectors by ionization.
+Therefore, tracks are used to identify charged particles and measure
+their momenta. In addition, the extrapolation of the trajectories
+allows to identify the interaction vertices.
+ 
+In order to reconstruct the track, the first step is to retrieve the information from
+the ID hits, which are converted into three-dimensional space points. Then, 
+the {\it inside-out} algorithm~\cite{insideoutalgo} iteratively builds
+a track by combining space points one by one, starting from a
+seed of three aligned hits in the pixel detector or in the SCT.
+For each new point a Kalman filter algorithm~\cite{kalmanfilter}
+checks the compatibility between the track and the new point. 
+A cleaning procedure prunes the track collection, removing 
+tracks sharing hits with other tracks, or reconstructed from noise hits. 
+Finally, the track quality is improved by taking into account the signal
+from the TRT and the effects from the interaction
+of the charged particle with the detector material. 
+
+For signals in the TRT which are not associated to any track candidate
+by the inside-out reconstruction, a second algorithm,
+called {\it outside-in}, is applied in order to
+reconstruct tracks from secondary charged particles. 
+The algorithm uses as seeds hits in the TRT
+and extrapolates back to the SCT and pixel detector.
+
+
 \section{Primary Vertices}
 \label{sec:pv}
+
 
 \section{Electrons}
 \label{sec:electrons}
@@ -23,14 +54,9 @@ by the passage of a neutrino (Sec.~\ref{sec:met}).
 An electron candidate object~\cite{elereco} is selected by searching 
 for a narrow, 
 localized cluster of energy deposits in the EM calorimeter, 
-with at least one ID track\footnote{A track is the reconstruction 
-of the trajectory of a charged particle, which leaves $hits$ in the 
-ID layers. The tracking algorithms~\cite{trackalgos} convert the 
-$hits$ into three-dimensional space points and extrapolate the 
-corresponding trajectory.}
-associated to it.
+with at least one ID track associated to it.
 
-A $sliding-window$ clustering algorithm is used to identify electron 
+A {\it sliding-window} clustering algorithm is used to identify electron 
 clusters. The algorithm performs a scan of the calorimeter searching 
 for local maxima of energy
 within a $\eta$-$\phi$ window of $0.075\times{}0.125$.
@@ -65,9 +91,9 @@ semi-leptonic decays.
 
 Overall, electron candidates are identified with \mbox{$\approx{}70\%$} 
 efficiency and a contamination rate of about \mbox{$2\cdot{}10^{-5}$}.
-A $loose$ selection, where some of the requirements are relaxed, 
+A {\it loose} selection, where some of the requirements are relaxed, 
 is also used, with the purpose of studying and modeling the contamination
-in the $tight$ candidates. The procedure to estimate this background
+in the {\it tight} candidates. The procedure to estimate this background
 contribution is detailed in Sec.~\ref{sec:bckg}[QCD background].
 
 The $\et$ of the electron is required to be larger than \mbox{$25 \GeV$}
@@ -79,45 +105,49 @@ are not considered.
 
 Muons are reconstructed using tracks measured in the 
 Muon Spectrometer (MS) and in the ID.
-The information from the two systems is $combined$ by matching
-the tracks with the \texttt{MuId} algorithm\footnote{The \texttt{MuId} 
-algorithm is also called ``chain 2'' reconstruction}~\cite{muid}.
+The information from the two systems is used by matching
+the tracks with the {\it MuId} algorithm~\cite{muidalgo} to build 
+{\it combined} muon candidates.
+
+The algorithm searches for track segments in the RPC and TGC in
+$\Delta\eta\times\Delta\phi=0.4\times0.4$ regions where the trigger
+fired. A single MS track is built with a least-square fitting method and
+the trajectory is extrapolated back to the interaction point, taking
+into account the energy loss in the calorimeter material. 
+
+
+
+Starting from regions where interesting activity has been triggered,
+track segments are searched for in the RPC and TGC and combined into a single track by means of a
+least-square fitting method. These track candidates are 
+subsequently extrapolated back to the interaction
+point and their momentum corrected for the mip energy loss in the calorimeter material.
+At this point a \chisq\ test (checking the difference between the extrapolated track coordinates weighted with
+combined covariance matrix) on the matching of the candidate MS track and the tracks reconstructed in 
+the ID is performed to obtain the final muon candidate track. Only ID tracks that satisfy some quality 
+requirements are considered for the matching: they need to have at least two pixel hits, of which at least
+one in the first layer; at least two pixel hits plus number of crossed dead pixel sensors; at least six SCT hits
+plus number of  crossed dead SCT sensors; a maximum of two pixel or SCT holes\footnote{A ``hole'' in the silicon
+detectors is a region where the module did not perform as expected even though the surrounding ones did.};
+defining the number of TRT outliers\footnote{``Outlier'' is a hit that is deviated from the track path.} 
+and the number of TRT hits as $N_{\rm TRT_{o}}$ and  $N_{\rm TRT_{h}}$ respectively, 
+$N_{\rm TRT_{h}}>5$ and $N_{\rm TRT_{o}}/N_{\rm TRT_{h}}<0.9$ for $|\eta|<1.9$, 
+$N_{\rm TRT_{o}}/N_{\rm TRT_{h}}<0.9$ if $N_{\rm TRT_{h}}>5$ for  $|\eta|\geq1.9$.
+In case no matching is found, no \texttt{combined} 
+muons are reconstructed, while if more candidates arise, the one giving the best \chisq\ is chosen.
+The momentum is computed as a weighted average of ID and MS measurements.
+
+Performance studies on muon reconstruction and identification done using 2010 data 
+from $\rts=7$~\tev\ collisions and Monte Carlo $Z\to \mu\mu$ events~\cite{ATLAS-CONF-2011-063} 
+have been recently updated with the data from $\rts=8$~\tev\ pp collisions~\cite{ATLAS-CONF-2013-088}.
+The measured reconstruction efficiency for \texttt{combined} muons
+is of about 98\% uniformely in pseudorapidity and 
+is shown in Figure~\ref{fig:mueff}. 
 
 
 
 
 
-
-
-
-
-
-
-
-The pattern recognition started from track segments in the MS, which were extrapolated to the ID.
-If a matching ID track for a MS track segment was found, a combined fit to the ID and MS muon hits was performed and a combined muon
-object was built.
-The muon momentum was measured from the combined fit.
-Only muons with a $\pt$ of at least \mbox{$20 \GeV$} fulfilling \mbox{$|\eta| < 2.5$} were considered in this analysis.
-
-Several isolation criteria were applied in order to suppress backgrounds from muons produced in jets, in particular muons from leptonically decaying
-$B$-mesons in $b$-jets.
-The energy deposited in the calorimeter in a cone of \mbox{$\Delta R = 0.3$} around the muon candidate was required to be smaller than \mbox{$4 \GeV$}.
-Also the sum of the transverse momenta of the tracks in the ID in a cone of \mbox{$\Delta R = 0.3$} around the muon track had to be smaller than \mbox{$4 \GeV$}.
-Additionally, if a jet with minimum $\pt$ of \mbox{$20 \GeV$} was closer than 0.4 in $\eta$-$\phi$-space to the muon, the muon was not considered isolated
-and was disregarded.
-
-Muon signatures were used in the trigger menu at L1, L2 and EF (Sec.~\ref{sec:triggerDAQ}).
-The triggers at L1 were based on coincidences in $\eta$ and $\phi$ of hits in the different layers of the RPC and TGC systems requiring a minimum
-$\pt$ of the trigger object candidate.
-At L2 and EF level, track finding algorithms using information from the MS and the ID were used.
-In this analysis, the \texttt{EF\_mu18} trigger chain was used which required a combined muon with \mbox{$\pt > 18 \GeV$} at EF level.
-
-Trigger, reconstruction and identification efficiencies were measured in data using tag-and-probe methods in \mbox{$Z \to \mu^+\mu^-$} events.
-Discrepancies between data and MC were accounted for by SFs~\cite{muonPerf}.
-MC events were weighted with the SFs, so that the efficiencies in the MC simulations yielded those in data.
-Events in which the muon object had a $\pt$ larger than \mbox{$150 \GeV$} were disregarded, because muon trigger SFs were not available for larger
-$\pt$ due to an issue with the trigger modelling in MC simulations in this region.
 
 
 
