--- a/tex/objects.tex
+++ b/tex/objects.tex
@@ -132,6 +132,93 @@ with a large total transverse momentum of overlapping ID tracks.
 \section{Jets}
 \label{sec:jets}
 
+Jets are collimated showers of particles from the hadronization of
+quarks or gluons produced at the primary vertex.
+The resulting stable particles leave signals both as tracks in the ID
+and as energy deposits in the calorimeters.
+
+Neighboring calorimeter cells are grouped into topological clusters
+({\it topoclusters}) based on the significance of the energy deposit
+in the calorimeter cells with respect to their noise
+level. Cells with $|E_{\rm cell}|>4\sigma$ are considered as seeds and
+all the neighboring cells with $|E_{\rm cell}| > 2\sigma$ are included
+in the topocluster. Cells adjacent to the selected ones are also
+included without any energy requirement.
+Topoclusters are calibrated at the EM scale. For $\sqrt{s} = $8~TeV
+collision events an additional correction, called Local Cluster
+Weigthing (LCW)~\cite{lcwcalib}, is applied. The LCW calibration
+scheme classifies the clusters as {\it mainly electromagnetic} or
+{\it mainly hadronic}, based on the their shape, and applies
+dedicated corrections derived from simulation.
+
+Jets are then reconstructed using the {\it anti-$k_t$}
+algorithm~\cite{antiktalgo}, which combines topoclusters iteratively,
+based on a distance parameter criterium. The distance parameter is
+defined as:
+\begin{equation}
+d_{ij}=min(p_{T_i}^{-2},p_{T_j}^{-2})\frac{\Delta R_{ij}^{2}}{R^{2}},
+\end{equation}
+where $p_{Ti}$ is the transverse momentum of topocluster $i$, 
+$\Delta R_{ij}$=$\sqrt{(\Delta\eta_{ij})^{2}+(\Delta\phi_{ij})^{2}}$ the distance 
+between constituents $i$ and
+$j$, $R$ a parameter of the algorithm that approximately controls the size
+of the jet and is chosen to be 0.4.
+The algorithm computes $d_{ij}$, the distance between two topocluster
+inputs $i$ and $j$, and $d_{iB}$,  the distance between the input $i$
+and the beam axis, for the whole list of topoclusters found in the
+event. If $d_{iB}$ is the smallest distance, the
+topocluster $i$ is considered a jet, removed from the list and the
+algorithm repeats the procedure with the remaining input objects.
+Otherwise, the $i$ and $j$ topoclusters corresponding to the smallest
+distance $d_{ij}$ are combined and the list is updated for a new
+iteration.
+The procedure is repeated until the list is empty.
+
+The anti-$k_t$ algorithm is chosen for its good performance 
+in harsh pile-up conditions, since it consider first topoclusters 
+with higher momentum, and produces jets with a conical
+structure.
+
+A pile-up correction is applied
+
+Once the jet is reconstructed, a 
+pile-up correction is applied in 
+order to subtract the average extra 
+energy in the jet originating from pp 
+interactions in the same or in other bunch crossings. 
+This pile-up correction depends on the number of primary vertices in an event ($NPV$),
+on the number of average interactions in 
+a luminosity block ($<\mu>$), and is derived in bins of jet $\eta$ in order to
+account for the different geometry of the detector. The
+correction is applied to bring all jets to a 
+reference point corresponding to $\mu=0$ and $NPV = 1$
+
+Finally the jet energy is corrected to the particle
+level using a orrection factor (referred to as 
+{\it jet energy response} obtained from a QCD 
+dijet \texttt{PYTHIA} Monte Carlo sample
+which does not include
+multiple pp interactions, as these have been already
+corrected for.
+
+The jets used for the calibration are isolated jets\footnote{Here an
+isolated jet is a jet which does not have any other
+jet with $\pt>7\gev$
+around a $\Delta R$ cone of 2.5$R$, where $R$ is
+the jet algorithm paramenter, i.e., for the \texttt{AKT4}, 0.4}
+reconstructed in the calorimeter and matched to
+a (also isolated) truth-level jet within $\Delta R<0.3$
+The simulated jet energy response 
+is the ratio between the energy measured in the LC jets ($E_{\rm LC}^j$)
+and the truth jet energy ($E_{\rm truth}^j$). It is measured in bins of
+the truth jet energy and of the calorimeter jet pseudorapidity $\eta_{\rm det}$
+and a bin-by-bin fit is performed to obtain a
+calibration function in terms of $E_{\rm LC}^j$
+binned in $\eta_{\rm det}$.
+The jet response correction is
+shown in Figure~\ref{fig:corr_jet}
+as a function of $\eta_{\rm det}$
+for different values of the jet energy.
 
 
 \subsection{$b$-tagging}
