--- a/tex/objects.tex
+++ b/tex/objects.tex
@@ -146,7 +146,7 @@ in the topocluster. Cells adjacent to the selected ones are also
 included without any energy requirement.
 Topoclusters are calibrated at the EM scale. For $\sqrt{s} = $8~TeV
 collision events an additional correction, called Local Cluster
-Weigthing (LCW)~\cite{lcwcalib}, is applied. The LCW calibration
+Weighting (LCW)~\cite{lcwcalib}, is applied. The LCW calibration
 scheme classifies the clusters as {\it mainly electromagnetic} or
 {\it mainly hadronic}, based on the their shape, and applies
 dedicated corrections derived from simulation.
