--- a/tex/experiment.tex
+++ b/tex/experiment.tex
@@ -11,7 +11,7 @@ ATLAS detector are discussed in Sec.~\ref{sec:ATLAS}.
 \section{The Large Hadron Collider}
 \label{sec:LHC}
 
-The Large Hadron Collider (LHC)~\cite{LHCreport12, *LHCreport3} 
+The Large Hadron Collider (LHC)~\cite{LHCreport} 
 is a circular proton-proton ($pp$) collider.
 It consists of a 27~km ring of superconducting magnets and
 accelerating cavities, where two beams of protons circulate in
