--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -4,13 +4,14 @@
 \usepackage{color}
 \usepackage{rotating}
 \usepackage[english]{babel}
+\usepackage[autostyle]{csquotes}
+\usepackage[backend=biber]{biblatex}
 \selectlanguage{english}
 \usepackage{setspace}
 
 \usepackage[latin1]{inputenc}
 \usepackage{longtable}
 \usepackage[it, bf]{caption}
-%\usepackage[dvips]{graphicx} % comment out for pdflatex
 \usepackage{amsfonts}
 \usepackage{amsmath}
 \usepackage{mathrsfs}
@@ -104,13 +105,6 @@
 \newcommand{\emptydot}{\textcolor{white}{.}}
 \newcommand{\emptypercent}{\textcolor{white}{\%}}
 
-%johannes
-\usepackage{cite}
-\usepackage{mcite}
-\hyphenation{HERWIG}
-\hyphenation{brems-strah-lung}
-\usepackage{multirow}
-\hyphenation{Chro-mo-dy-na-mics}
 \usepackage{hyperref}
 \hypersetup{%
     pdfborder = {0 0 0}
