compile only objects and add bibliography

--- a/main.tex
+++ b/main.tex
@@ -6,9 +6,10 @@
 
 \input{tex/preamble}
 
-\includeonly{tex/experiment}
+\includeonly{tex/objects}
 
 \addbibresource{bib/experiment.bib}
+\addbibresource{bib/objects.bib}
  
 \begin{document} 
 
